writ-compiler/tests/snapshots/lowering_tests__entity_duplicate_use_clause_error.snap
---
source: writ-compiler/tests/lowering_tests.rs
expression: "(ast, errors)"
---
(
    Ast {
        items: [
            Entity(
                AstEntityDecl {
                    attrs: [],
                    vis: None,
                    name: "Guard",
                    name_span: 7..12,
                    properties: [],
                    component_slots: [
                        AstComponentSlot {
                            component: "Health",
                            component_span: 19..25,
                            overrides: [
                                (
                                    "current",
                                    28..35,
                                    IntLit {
                                        value: 80,
                                        span: 37..39,
                                    },
                                ),
                            ],
                            span: 15..42,
                        },
                    ],
                    hooks: [],
                    inherent_impl: None,
                    span: 0..68,
                },
            ),
        ],
    },
    [
        DuplicateUseClause {
            component: "Health",
            entity: "Guard",
            span: 47..53,
        },
    ],
)
