writ-compiler/tests/snapshots/lowering_tests__entity_full_declaration.snap
---
source: writ-compiler/tests/lowering_tests.rs
expression: ast
---
Ast {
    items: [
        Entity(
            AstEntityDecl {
                attrs: [],
                vis: None,
                name: "Guard",
                name_span: 7..12,
                properties: [
                    AstStructField {
                        vis: None,
                        is_mutable: false,
                        name: "name",
                        name_span: 15..19,
                        ty: Named {
                            name: "string",
                            span: 21..27,
                        },
                        default: None,
                        span: 15..28,
                    },
                ],
                component_slots: [
                    AstComponentSlot {
                        component: "Health",
                        component_span: 33..39,
                        overrides: [
                            (
                                "current",
                                42..49,
                                IntLit {
                                    value: 80,
                                    span: 51..53,
                                },
                            ),
                            (
                                "max",
                                55..58,
                                IntLit {
                                    value: 80,
                                    span: 60..62,
                                },
                            ),
                        ],
                        span: 29..65,
                    },
                ],
                hooks: [
                    AstEntityHook {
                        contract: "OnCreate",
                        contract_span: 110..116,
                        method: AstFnDecl {
                            attrs: [],
                            vis: None,
                            name: "on_create",
                            name_span: 110..116,
                            generics: [],
                            params: [
                                SelfParam {
                                    mutable: true,
                                    span: 110..116,
                                },
                            ],
                            return_type: None,
                            body: [
                                Let {
                                    mutable: false,
                                    name: "ready",
                                    name_span: 123..128,
                                    ty: Some(
                                        Named {
                                            name: "bool",
                                            span: 130..134,
                                        },
                                    ),
                                    value: BoolLit {
                                        value: true,
                                        span: 137..141,
                                    },
                                    span: 119..142,
                                },
                            ],
                            span: 107..144,
                        },
                        span: 107..144,
                    },
                ],
                inherent_impl: Some(
                    AstImplDecl {
                        generics: [],
                        contract: None,
                        target: Named {
                            name: "Guard",
                            span: 7..12,
                        },
                        members: [
                            Fn(
                                AstFnDecl {
                                    attrs: [],
                                    vis: None,
                                    name: "greet",
                                    name_span: 69..74,
                                    generics: [],
                                    params: [],
                                    return_type: Some(
                                        Named {
                                            name: "string",
                                            span: 80..86,
                                        },
                                    ),
                                    body: [
                                        Return {
                                            value: Some(
                                                StringLit {
                                                    value: "hello",
                                                    span: 96..103,
                                                },
                                            ),
                                            span: 89..104,
                                        },
                                    ],
                                    span: 66..106,
                                },
                            ),
                        ],
                        span: 0..146,
                    },
                ),
                span: 0..146,
            },
        ),
    ],
}
