writ-compiler/tests/snapshots/lowering_tests__entity_lifecycle_on_create.snap
---
source: writ-compiler/tests/lowering_tests.rs
expression: ast
---
Ast {
    items: [
        Entity(
            AstEntityDecl {
                attrs: [],
                vis: None,
                name: "Guard",
                name_span: 7..12,
                properties: [],
                component_slots: [],
                hooks: [
                    AstEntityHook {
                        contract: "OnCreate",
                        contract_span: 18..24,
                        method: AstFnDecl {
                            attrs: [],
                            vis: None,
                            name: "on_create",
                            name_span: 18..24,
                            generics: [],
                            params: [
                                SelfParam {
                                    mutable: true,
                                    span: 18..24,
                                },
                            ],
                            return_type: None,
                            body: [
                                Let {
                                    mutable: false,
                                    name: "x",
                                    name_span: 31..32,
                                    ty: Some(
                                        Named {
                                            name: "int",
                                            span: 34..37,
                                        },
                                    ),
                                    value: IntLit {
                                        value: 42,
                                        span: 40..42,
                                    },
                                    span: 27..43,
                                },
                            ],
                            span: 15..45,
                        },
                        span: 15..45,
                    },
                ],
                inherent_impl: None,
                span: 0..47,
            },
        ),
    ],
}
