writ-compiler/tests/snapshots/lowering_tests__entity_lifecycle_on_destroy.snap
---
source: writ-compiler/tests/lowering_tests.rs
expression: ast
---
Ast {
    items: [
        Entity(
            AstEntityDecl {
                attrs: [],
                vis: None,
                name: "Guard",
                name_span: 7..12,
                properties: [],
                component_slots: [],
                hooks: [
                    AstEntityHook {
                        contract: "OnDestroy",
                        contract_span: 18..25,
                        method: AstFnDecl {
                            attrs: [],
                            vis: None,
                            name: "on_destroy",
                            name_span: 18..25,
                            generics: [],
                            params: [
                                SelfParam {
                                    mutable: true,
                                    span: 18..25,
                                },
                            ],
                            return_type: None,
                            body: [],
                            span: 15..29,
                        },
                        span: 15..29,
                    },
                ],
                inherent_impl: None,
                span: 0..31,
            },
        ),
    ],
}
