writ-compiler/tests/snapshots/lowering_tests__entity_lifecycle_on_interact_with_params.snap
---
source: writ-compiler/tests/lowering_tests.rs
expression: ast
---
Ast {
    items: [
        Entity(
            AstEntityDecl {
                attrs: [],
                vis: None,
                name: "Guard",
                name_span: 7..12,
                properties: [],
                component_slots: [],
                hooks: [
                    AstEntityHook {
                        contract: "OnInteract",
                        contract_span: 18..26,
                        method: AstFnDecl {
                            attrs: [],
                            vis: None,
                            name: "on_interact",
                            name_span: 18..26,
                            generics: [],
                            params: [
                                SelfParam {
                                    mutable: true,
                                    span: 18..26,
                                },
                                Regular(
                                    AstParam {
                                        name: "who",
                                        name_span: 27..30,
                                        ty: Named {
                                            name: "Entity",
                                            span: 32..38,
                                        },
                                        span: 27..38,
                                    },
                                ),
                            ],
                            return_type: None,
                            body: [
                                Let {
                                    mutable: false,
                                    name: "msg",
                                    name_span: 46..49,
                                    ty: Some(
                                        Named {
                                            name: "string",
                                            span: 51..57,
                                        },
                                    ),
                                    value: StringLit {
                                        value: "hello",
                                        span: 60..67,
                                    },
                                    span: 42..68,
                                },
                            ],
                            span: 15..70,
                        },
                        span: 15..70,
                    },
                ],
                inherent_impl: None,
                span: 0..72,
            },
        ),
    ],
}
