writ-compiler/tests/snapshots/lowering_tests__entity_methods_inherent_impl.snap
---
source: writ-compiler/tests/lowering_tests.rs
expression: ast
---
Ast {
    items: [
        Entity(
            AstEntityDecl {
                attrs: [],
                vis: None,
                name: "Guard",
                name_span: 7..12,
                properties: [
                    AstStructField {
                        vis: None,
                        is_mutable: false,
                        name: "name",
                        name_span: 15..19,
                        ty: Named {
                            name: "string",
                            span: 21..27,
                        },
                        default: None,
                        span: 15..28,
                    },
                ],
                component_slots: [],
                hooks: [],
                inherent_impl: Some(
                    AstImplDecl {
                        generics: [],
                        contract: None,
                        target: Named {
                            name: "Guard",
                            span: 7..12,
                        },
                        members: [
                            Fn(
                                AstFnDecl {
                                    attrs: [],
                                    vis: None,
                                    name: "greet",
                                    name_span: 32..37,
                                    generics: [],
                                    params: [],
                                    return_type: Some(
                                        Named {
                                            name: "string",
                                            span: 43..49,
                                        },
                                    ),
                                    body: [
                                        Return {
                                            value: Some(
                                                StringLit {
                                                    value: "hello",
                                                    span: 59..66,
                                                },
                                            ),
                                            span: 52..67,
                                        },
                                    ],
                                    span: 29..69,
                                },
                            ),
                        ],
                        span: 0..71,
                    },
                ),
                span: 0..71,
            },
        ),
    ],
}
